--- a/quanlyrenluyen/quanlyrenluyen.csproj
+++ b/quanlyrenluyen/quanlyrenluyen.csproj
@@ -174,6 +174,12 @@
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SplashScreen1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SplashScreen1.Designer.cs">
+      <DependentUpon>SplashScreen1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ThongkeHocvien.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -203,6 +209,18 @@
     </Compile>
     <Compile Include="Forms\ThongkeVipham.Designer.cs">
       <DependentUpon>ThongkeVipham.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\WaitForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\WaitForm1.Designer.cs">
+      <DependentUpon>WaitForm1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\WaitForm2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\WaitForm2.Designer.cs">
+      <DependentUpon>WaitForm2.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\XtraForm_Hocvien.cs">
       <SubType>Form</SubType>
@@ -274,6 +292,9 @@
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SplashScreen1.resx">
+      <DependentUpon>SplashScreen1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ThongkeHocvien.resx">
       <DependentUpon>ThongkeHocvien.cs</DependentUpon>
     </EmbeddedResource>
@@ -288,6 +309,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ThongkeVipham.resx">
       <DependentUpon>ThongkeVipham.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\WaitForm1.resx">
+      <DependentUpon>WaitForm1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\WaitForm2.resx">
+      <DependentUpon>WaitForm2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\XtraForm_Hocvien.resx">
       <DependentUpon>XtraForm_Hocvien.cs</DependentUpon>
